--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -6,9 +6,13 @@
 }
 
 body {
-  font-family: 'Barlow Semi Condensed';
+  font-family: "Barlow Semi Condensed";
   background: radial-gradient(#1f3756, #141539);
-  height: 100vh;
+  overflow-x: hidden;
+}
+
+.logo {
+  width: 8em;
 }
 
 .row {
@@ -39,9 +43,9 @@ body {
 .box {
   margin: 0 auto;
   margin-top: 2em;
-  padding: 1em;
-  line-height: 1.5em;
-  width: 50%;
+  padding: 0.6em;
+  line-height: 0.8em;
+  width: 90%;
   border: #606e85 0.2em solid;
   border-radius: 0.6em;
 }
@@ -51,18 +55,18 @@ body {
   display: -ms-flexbox;
   display: flex;
   background-color: white;
-  border-radius: 0.6em;
+  border-radius: 0.4em;
   padding: 1em;
 }
 
 .scoretext {
-  font-size: 1.4rem;
+  font-size: 1rem;
   color: #2a46c0;
   text-transform: uppercase;
 }
 
 .player_score, .computer_score {
-  font-size: 3rem;
+  font-size: 2rem;
   color: #3b4363;
 }
 
@@ -70,7 +74,7 @@ body {
   background-image: url("../../assets/bg-triangle.svg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-size: 20%;
+  background-size: 55%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -80,9 +84,9 @@ body {
   margin-top: 10vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-column-gap: 10em;
-          column-gap: 10em;
-  row-gap: 4em;
+  -webkit-column-gap: 5em;
+          column-gap: 5em;
+  row-gap: 2em;
 }
 
 .break {
@@ -92,54 +96,57 @@ body {
 }
 
 #playbutton {
-  margin: 2em;
-  padding: 5em;
+  margin: 1.4em;
+  padding: 3em;
   border-radius: 50%;
   border: none;
-  -webkit-box-shadow: #c8c3c3 0px 6px 0px 2px inset;
-          box-shadow: #c8c3c3 0px 6px 0px 2px inset;
+  -webkit-box-shadow: #c8c3c3 0px 3px 0px 2px inset;
+          box-shadow: #c8c3c3 0px 3px 0px 2px inset;
 }
 
 .scissors {
   background-image: url("./../../assets/icon-scissors.svg");
   background-position: center;
   background-repeat: no-repeat;
+  background-size: 40%;
 }
 
 .rock {
   background-image: url("./../../assets/icon-rock.svg");
   background-position: center;
   background-repeat: no-repeat;
+  background-size: 40%;
 }
 
 .paper {
   background-image: url("./../../assets/icon-paper.svg");
   background-position: center;
   background-repeat: no-repeat;
+  background-size: 40%;
 }
 
 .rock-wrapper {
   background: -webkit-gradient(linear, left top, left bottom, from(#dd405d), to(#dc2e4e));
   background: linear-gradient(to bottom, #dd405d, #dc2e4e);
   border-radius: 50%;
-  -webkit-box-shadow: rgba(156, 9, 36, 0.815) 0 -12px 2px 2px inset;
-          box-shadow: rgba(156, 9, 36, 0.815) 0 -12px 2px 2px inset;
+  -webkit-box-shadow: rgba(156, 9, 36, 0.815) 0 -6px 2px 2px inset;
+          box-shadow: rgba(156, 9, 36, 0.815) 0 -6px 2px 2px inset;
 }
 
 .paper-wrapper {
   background: -webkit-gradient(linear, left top, left bottom, from(#5671f5), to(#4865f4));
   background: linear-gradient(to bottom, #5671f5, #4865f4);
   border-radius: 50%;
-  -webkit-box-shadow: #1a37c7 0 -5px 2px 2px inset;
-          box-shadow: #1a37c7 0 -5px 2px 2px inset;
+  -webkit-box-shadow: #1a37c7 0 -6px 2px 2px inset;
+          box-shadow: #1a37c7 0 -6px 2px 2px inset;
 }
 
 .scissors-wrapper {
   background: -webkit-gradient(linear, left top, left bottom, from(#eca922), to(#ec9e0e));
   background: linear-gradient(to bottom, #eca922, #ec9e0e);
   border-radius: 50%;
-  -webkit-box-shadow: #b0770c 0 -7px 2px 2px inset;
-          box-shadow: #b0770c 0 -7px 2px 2px inset;
+  -webkit-box-shadow: #b0770c 0 -6px 2px 2px inset;
+          box-shadow: #b0770c 0 -6px 2px 2px inset;
 }
 
 .modal {
@@ -155,7 +162,7 @@ body {
   /* Full width */
   height: 100%;
   /* Full height */
-  overflow: auto;
+  overflow-x: hidden;
   /* Enable scroll if needed */
   background-color: black;
   /* Fallback color */
@@ -209,14 +216,16 @@ body {
   color: white;
   background-color: transparent;
   border: 0.1em solid white;
-  width: 10em;
   border-radius: 0.6em;
   font-family: inherit;
   letter-spacing: 0.3em;
   text-transform: uppercase;
-  position: relative;
-  left: 84%;
   font-size: 1.3rem;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 10vh;
+  margin-bottom: 1em;
 }
 
 #modalButton:hover {
@@ -226,29 +235,35 @@ body {
 }
 
 .battle {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-column-gap: 5em;
-          column-gap: 5em;
+  -webkit-column-gap: 1em;
+          column-gap: 1em;
   -ms-flex-line-pack: center;
       align-content: center;
   display: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: 0;
+}
+
+.computerwep {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
 }
 
 #emptywep {
-  width: 25em;
-  height: 25em;
+  width: 8em;
+  height: 8em;
   background-color: rgba(11, 13, 55, 0.212);
   border-radius: 50%;
   position: relative;
 }
 
 .weptext {
-  margin-top: 10vh;
+  margin-top: 5vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -258,6 +273,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 2em;
+  font-size: 1rem;
   text-transform: uppercase;
   color: #fff;
   letter-spacing: 0.2em;
@@ -269,11 +285,11 @@ body {
   background-size: 30%;
   background-repeat: no-repeat;
   background-color: white;
-  height: 20em;
-  width: 20em;
+  height: 6em;
+  width: 6em;
   border-radius: 50%;
-  -webkit-box-shadow: #c8c3c3 0px 12px 0px 2px inset;
-          box-shadow: #c8c3c3 0px 12px 0px 2px inset;
+  -webkit-box-shadow: #c8c3c3 0px 6px 0px 2px inset;
+          box-shadow: #c8c3c3 0px 6px 0px 2px inset;
 }
 
 .scissorsimage {
@@ -282,11 +298,11 @@ body {
   background-size: 30%;
   background-repeat: no-repeat;
   background-color: white;
-  height: 20em;
-  width: 20em;
+  height: 6em;
+  width: 6em;
   border-radius: 50%;
-  -webkit-box-shadow: #c8c3c3 0px 12px 0px 2px inset;
-          box-shadow: #c8c3c3 0px 12px 0px 2px inset;
+  -webkit-box-shadow: #c8c3c3 0px 6px 0px 2px inset;
+          box-shadow: #c8c3c3 0px 6px 0px 2px inset;
 }
 
 .paperimage {
@@ -295,28 +311,23 @@ body {
   background-size: 30%;
   background-repeat: no-repeat;
   background-color: white;
-  height: 20em;
-  width: 20em;
+  height: 6em;
+  width: 6em;
   border-radius: 50%;
-  -webkit-box-shadow: #c8c3c3 0px 12px 0px 2px inset;
-          box-shadow: #c8c3c3 0px 12px 0px 2px inset;
+  -webkit-box-shadow: #c8c3c3 0px 6px 0px 2px inset;
+          box-shadow: #c8c3c3 0px 6px 0px 2px inset;
 }
 
 .rockimage-wrapper {
   background: -webkit-gradient(linear, left top, left bottom, from(#dd405d), to(#dc2e4e));
   background: linear-gradient(to bottom, #dd405d, #dc2e4e);
   border-radius: 50%;
-  -webkit-box-shadow: rgba(156, 9, 36, 0.815) 0 -12px 2px 2px inset;
-          box-shadow: rgba(156, 9, 36, 0.815) 0 -12px 2px 2px inset;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-shadow: rgba(156, 9, 36, 0.815) 0 -6px 2px 2px inset;
+          box-shadow: rgba(156, 9, 36, 0.815) 0 -6px 2px 2px inset;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 3em;
+  padding: 1em;
   -webkit-animation: drop 0.8s forwards;
           animation: drop 0.8s forwards;
 }
@@ -361,17 +372,12 @@ body {
   background: -webkit-gradient(linear, left top, left bottom, from(#eca922), to(#ec9e0e));
   background: linear-gradient(to bottom, #eca922, #ec9e0e);
   border-radius: 50%;
-  -webkit-box-shadow: #b0770c 0 -12px 2px 2px inset;
-          box-shadow: #b0770c 0 -12px 2px 2px inset;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-shadow: #b0770c 0 -6px 2px 2px inset;
+          box-shadow: #b0770c 0 -6px 2px 2px inset;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 3em;
+  padding: 1em;
   -webkit-animation: drop 0.8s forwards;
           animation: drop 0.8s forwards;
 }
@@ -380,55 +386,61 @@ body {
   background: -webkit-gradient(linear, left top, left bottom, from(#5671f5), to(#4865f4));
   background: linear-gradient(to bottom, #5671f5, #4865f4);
   border-radius: 50%;
-  -webkit-box-shadow: #1a37c7 0 -12px 2px 2px inset;
-          box-shadow: #1a37c7 0 -12px 2px 2px inset;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-shadow: #1a37c7 0 -6px 2px 2px inset;
+          box-shadow: #1a37c7 0 -6px 2px 2px inset;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 3em;
+  padding: 1em;
   -webkit-animation: drop 0.8s forwards;
           animation: drop 0.8s forwards;
 }
 
 .result {
-  padding: 2em;
+  padding: 1em;
   text-transform: uppercase;
+  margin-top: 10vh;
+  -webkit-animation: drop 0.8s forwards;
+          animation: drop 0.8s forwards;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 30vh;
-  -webkit-animation: drop 0.8s forwards;
-          animation: drop 0.8s forwards;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .result h1 {
   font-size: 4rem;
   color: white;
   margin-bottom: 0.4em;
+  text-align: center;
 }
 
 .losebutton, .winbutton {
   padding: 0.6em;
-  color: #dc2e4e;
+  color: #3b4363;
   background-color: white;
   border: none;
-  width: 13em;
   border-radius: 0.4em;
   font-family: inherit;
   letter-spacing: 0.2em;
   text-transform: uppercase;
   font-size: 1.2rem;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
-.winbutton {
+.losebutton:hover, .winbutton:hover {
+  color: #dc2e4e;
+}
+
+.winbutton:hover {
   color: #2a46c0;
 }
 
@@ -455,13 +467,16 @@ button:hover {
           transform: translateY(-0.2em);
 }
 
-.win, .tie, .loss, .result {
+.win,
+.tie,
+.loss,
+.result {
   display: none;
 }
 
 .gameover, .gameover2 {
   margin-top: 2em;
-  margin-bottom: 4em;
+  margin-bottom: 2em;
 }
 
 .gameover.gameover h1, .gameover2 h1 {
@@ -473,28 +488,285 @@ button:hover {
 }
 
 #svg {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   position: absolute;
-  width: 800px;
-  top: -5em;
-  right: -10em;
+  top: -20%;
   pointer-events: none;
 }
 
+.outer-ring2 {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: 12%;
+  margin-right: 12%;
+}
+
 .irstyle {
-  outline: solid rgba(96, 110, 133, 0.144) 10em;
+  outline: solid rgba(96, 110, 133, 0.055) 4em;
   border-radius: 50%;
   position: relative;
 }
 
 .orstyle {
   border-radius: 50%;
-  outline: solid rgba(96, 110, 133, 0.027) 15em;
+  outline: solid rgba(96, 110, 133, 0.15) 2.5em;
   position: relative;
 }
 
 .crstyle {
-  outline: solid 5em rgba(96, 110, 133, 0.308);
+  outline: solid 1em rgba(96, 110, 133, 0.137);
   border-radius: 50%;
   position: relative;
+}
+
+@media screen and (min-width: 33em) {
+  .scissorsimage-wrapper,
+  .rockimage-wrapper,
+  .paperimage-wrapper {
+    padding: 2em;
+  }
+  .scissorsimage,
+  .rockimage,
+  .paperimage {
+    background-size: 50%;
+    height: 7em;
+    width: 7em;
+  }
+  #emptywep {
+    height: 11em;
+    width: 11em;
+  }
+  .scissors,
+  .rock,
+  .paper {
+    background-size: 50%;
+  }
+  .buttons-container {
+    background-size: 42%;
+  }
+  #playbutton {
+    margin: 2em;
+    padding: 4em;
+  }
+  .battle {
+    -webkit-column-gap: 5em;
+            column-gap: 5em;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: 0;
+  }
+  .weptext {
+    font-size: 1.5rem;
+  }
+  #modalButton {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+  }
+  .computerwep {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+@media screen and (min-width: 53.5em) {
+  .box {
+    width: 50%;
+  }
+  .scissorsimage-wrapper,
+  .rockimage-wrapper,
+  .paperimage-wrapper {
+    padding: 3em;
+  }
+  .scissorsimage,
+  .rockimage,
+  .paperimage {
+    background-size: 50%;
+    height: 15em;
+    width: 15em;
+  }
+  #emptywep {
+    height: 20em;
+    width: 20em;
+  }
+  .scissors,
+  .rock,
+  .paper {
+    background-size: 45%;
+  }
+  .buttons-container {
+    background-size: 30%;
+    -webkit-column-gap: 5em;
+            column-gap: 5em;
+  }
+  #playbutton {
+    padding: 6em;
+  }
+  .battle {
+    -webkit-column-gap: 12em;
+            column-gap: 12em;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .computerwep {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .weptext {
+    font-size: 2rem;
+  }
+  .logo {
+    width: 100%;
+  }
+  .scoretext {
+    font-size: 1.4rem;
+  }
+  .score-row {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+  .player_score, .computer_score {
+    font-size: 3rem;
+  }
+  .box {
+    line-height: 1em;
+    padding: 1em;
+  }
+  #modalButton {
+    font-size: 1.3rem;
+    width: 15%;
+    margin-left: 75%;
+    margin-right: 5%;
+    position: relative;
+  }
+  .losebutton, .winbutton {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 1em;
+  }
+  .irstyle {
+    outline: solid rgba(96, 110, 133, 0.055) 6em;
+    border-radius: 50%;
+    position: relative;
+  }
+  .orstyle {
+    border-radius: 50%;
+    outline: solid rgba(96, 110, 133, 0.15) 9em;
+    position: relative;
+  }
+  .crstyle {
+    outline: solid 3em rgba(96, 110, 133, 0.137);
+    border-radius: 50%;
+    position: relative;
+  }
+  .outer-ring,
+  .outer-ring2 {
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 82em) {
+  .box {
+    width: 40%;
+  }
+  .scissorsimage-wrapper,
+  .rockimage-wrapper,
+  .paperimage-wrapper {
+    padding: 3em;
+  }
+  .scissorsimage,
+  .rockimage,
+  .paperimage {
+    background-size: 30%;
+    height: 17em;
+    width: 17em;
+    -webkit-box-shadow: #c8c3c3 0px 12px 0px 2px inset;
+            box-shadow: #c8c3c3 0px 12px 0px 2px inset;
+  }
+  .scissorsimage-wrapper {
+    -webkit-box-shadow: #b0770c 0 -12px 2px 2px inset;
+            box-shadow: #b0770c 0 -12px 2px 2px inset;
+  }
+  .rockimage-wrapper {
+    -webkit-box-shadow: rgba(156, 9, 36, 0.815) 0 -12px 2px 2px inset;
+            box-shadow: rgba(156, 9, 36, 0.815) 0 -12px 2px 2px inset;
+  }
+  .paperimage-wrapper {
+    -webkit-box-shadow: #1a37c7 0 -12px 2px 2px inset;
+            box-shadow: #1a37c7 0 -12px 2px 2px inset;
+  }
+  .rock-wrapper {
+    -webkit-box-shadow: rgba(156, 9, 36, 0.815) 0 -12px 2px 2px inset;
+            box-shadow: rgba(156, 9, 36, 0.815) 0 -12px 2px 2px inset;
+  }
+  .scissors-wrapper {
+    -webkit-box-shadow: #b0770c 0 -12px 2px 2px inset;
+            box-shadow: #b0770c 0 -12px 2px 2px inset;
+  }
+  .paper-wrapper {
+    -webkit-box-shadow: #1a37c7 0 -12px 2px 2px inset;
+            box-shadow: #1a37c7 0 -12px 2px 2px inset;
+  }
+  #emptywep {
+    height: 23em;
+    width: 23em;
+  }
+  .buttons-container {
+    background-size: 20%;
+    -webkit-column-gap: 8em;
+            column-gap: 8em;
+    margin-top: 5vh;
+  }
+  #playbutton {
+    -webkit-box-shadow: #c8c3c3 0px 6px 0px 2px inset;
+            box-shadow: #c8c3c3 0px 6px 0px 2px inset;
+  }
+  .weptext {
+    margin-top: 10vh;
+    margin-bottom: 2em;
+  }
+  .battle {
+    -ms-flex-wrap: none;
+        flex-wrap: none;
+    -webkit-column-gap: 5em;
+            column-gap: 5em;
+  }
+  .result {
+    margin-top: 30vh;
+  }
+  .computerwep {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  #modalButton {
+    font-size: 1.3rem;
+    width: 12%;
+    margin-left: 81%;
+    margin-right: 7%;
+    position: relative;
+    margin-top: 5vh;
+  }
+  .irstyle {
+    outline: solid rgba(96, 110, 133, 0.055) 10em;
+    border-radius: 50%;
+    position: relative;
+  }
+  .orstyle {
+    border-radius: 50%;
+    outline: solid rgba(96, 110, 133, 0.15) 15em;
+    position: relative;
+  }
+  .crstyle {
+    outline: solid 5em rgba(96, 110, 133, 0.137);
+    border-radius: 50%;
+    position: relative;
+  }
 }
 /*# sourceMappingURL=main.css.map */
