--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,15 +1,14 @@
-$scissors1:hsl(39, 89%, 49%);
-$scissors2:hsl(40, 84%, 53%);
-$paper1:hsl(230, 89%, 62%);
-$paper2:hsl(230, 89%, 65%);
-$rock1:hsl(349, 71%, 52%);
-$rock2:hsl(349, 70%, 56%);
-$darktext:hsl(229, 25%, 31%);
-$scoretext:hsl(229, 64%, 46%);
-$headeroutl:hsl(217, 16%, 45%);
-$bggrad:radial-gradient(hsl(214, 47%, 23%),hsl(237, 49%, 15%));
-$font-weights:(
-    "strong":600,
-    "bold":700
+$scissors1: hsl(39, 89%, 49%);
+$scissors2: hsl(40, 84%, 53%);
+$paper1: hsl(230, 89%, 62%);
+$paper2: hsl(230, 89%, 65%);
+$rock1: hsl(349, 71%, 52%);
+$rock2: hsl(349, 70%, 56%);
+$darktext: hsl(229, 25%, 31%);
+$scoretext: hsl(229, 64%, 46%);
+$headeroutl: hsl(217, 16%, 45%);
+$bggrad: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+$font-weights: (
+  "strong": 600,
+  "bold": 700,
 );
-
